test/integration/bad/suggest_ident.stan
data {
   int ba;
}

model {
   b ~ normal(0,1);
}
